small alignment fix to keywords in Profile page

--- a/imports/ui/components/profile/profile.scss
+++ b/imports/ui/components/profile/profile.scss
@@ -71,3 +71,7 @@
 		padding: 60px;
 	}
 }
+
+.md-chip-remove:focus{
+	outline:0;
+}
